# bstream

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  TODO  bstream.code-workspace
include/: bstream.h
include/bstream/: base_classes.h  context.h  error.h  error_category_context.h  fwd_decls.h  ibstream.h  ibstream_traits.h  ifbstream.h  imbstream.h  macros.h  memory.h  msgpack.h  obstream.h  obstream_traits.h  ofbstream.h  ombstream.h  sink.h  source.h  stdlib.h  traits.h  typecode.h  types.h
include/bstream/buffer/: sink.h  source.h
include/bstream/bufseq/: sink.h  source.h
include/bstream/file/: sink.h  source.h
include/bstream/stdlib/: chrono.h  deque.h  forward_list.h  list.h  map.h  pair.h  set.h  tuple.h  unordered_map.h  unordered_set.h  vector.h
include/logicmill/armi/: client_proxy.h  interface_stub_builder.h  macros.h  member_func_proxy.h  member_func_stub.h  reply_handler.h  server_stub.h  transport.h
include/logicmill/armi/adapters/async/: adapter.h  bstream_bridge.h  cereal_bridge.h
include/logicmill/armi/adapters/cereal/: traits.h
include/logicmill/async/: channel.h  event_flow.h  loop.h  tcp.h  timer.h  transceiver.h
include/logicmill/bstream/: context.h  ibstream.h  ibstream_traits.h  macros.h  obstream.h  obstream_traits.h  ofbstream.h  ombstream.h  sink.h  source.h  types.h
include/logicmill/bstream/buffer/: sink.h  source.h
include/logicmill/bstream/bufseq/: sink.h  source.h
include/logicmill/bstream/file/: sink.h  source.h
include/logicmill/bstream/stdlib/: tuple.h
include/logicmill/laps/: tls.h  types.h
scripts/: doutil.cmake
src/async/: loop_uv.cpp  loop_uv.h  tcp_uv.cpp  tcp_uv.h  timer_uv.h  udp_uv.cpp  udp_uv.h
src/bstream/: buffer_sink.cpp  bufseq_sink.cpp  error.cpp  error_category_context.cpp  file_sink.cpp  file_source.cpp  ibstream.cpp  obstream.cpp  sink.cpp  source.cpp
test/armi/: basic.cpp  basic_cereal.cpp
test/async/: tcp.cpp  udp.cpp
test/bstream/: abstract_source.cpp  bufseq.cpp  common.h  fbstream.cpp  file.cpp  memory.cpp  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
test/bstream/test_probes/: base.h  buffer.h  bufseq.h  file.h
test/laps/: layers.cpp  tls_layer.cpp
